# raylib-cmake-template

./: CMakeLists.txt  README.md  main.cpp
src/: SimpleRaylib.h
